// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons/Icon ExtraSmall smoke-test 1`] = `
<span class="sc-aXZVg HgUIg">
  <svg viewbox="0 0 50 50"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path d="M0 0h23.795v23.795H0z">
      </path>
    </defs>
    <g fill="none"
       fill-rule="evenodd"
    >
      <path d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
            fill="currentColor"
      >
      </path>
      <g transform="translate(13.308 1)">
        <path d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
              fill="currentColor"
        >
        </path>
      </g>
    </g>
  </svg>
</span>
`;

exports[`Icons/Icon Large smoke-test 1`] = `
<span class="sc-aXZVg ipqFja">
  <svg viewbox="0 0 50 50"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path d="M0 0h23.795v23.795H0z">
      </path>
    </defs>
    <g fill="none"
       fill-rule="evenodd"
    >
      <path d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
            fill="currentColor"
      >
      </path>
      <g transform="translate(13.308 1)">
        <path d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
              fill="currentColor"
        >
        </path>
      </g>
    </g>
  </svg>
</span>
`;

exports[`Icons/Icon Medium smoke-test 1`] = `
<span class="sc-aXZVg bMcScH">
  <svg viewbox="0 0 50 50"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path d="M0 0h23.795v23.795H0z">
      </path>
    </defs>
    <g fill="none"
       fill-rule="evenodd"
    >
      <path d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
            fill="currentColor"
      >
      </path>
      <g transform="translate(13.308 1)">
        <path d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
              fill="currentColor"
        >
        </path>
      </g>
    </g>
  </svg>
</span>
`;

exports[`Icons/Icon Small smoke-test 1`] = `
<span class="sc-aXZVg cgGILR">
  <svg viewbox="0 0 50 50"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <path d="M0 0h23.795v23.795H0z">
      </path>
    </defs>
    <g fill="none"
       fill-rule="evenodd"
    >
      <path d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
            fill="currentColor"
      >
      </path>
      <g transform="translate(13.308 1)">
        <path d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
              fill="currentColor"
        >
        </path>
      </g>
    </g>
  </svg>
</span>
`;
